[package]
name = "connect"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
paste = "1.0.15"
text_io = "0.1.12"

[[bin]]
name = "simple"

[[bench]]
name = "grid"
harness = false
